--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: sholoogoogledriveuploader
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python bot.py
+    startCommand: python bot/__main__.py
     repo: https://github.com/sholoomail/google-drive-telegram-bot.git
     branch: main
     envVars:
