--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pyrogram==1.0.1
 tgcrypto
 oauth2client
 psycopg2-binary
-sqlalchemy==2.0
+sqlalchemy==2.0.0rc1
 httplib2
 pySmartDL
 google-api-python-client
